third_party/move/move-compiler/tests/move_check/typing/ignore_inferred_resource2.exp
error[E04010]: cannot infer type
  ┌─ tests/move_check/typing/ignore_inferred_resource2.move:4:9
  │
4 │         S{};
  │         ^^^ Cannot infer the type parameter `T` for generic struct `0x8675309::M::S`. Try providing a type parameter.

